<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:text="@string/app_name"
    android:textSize="20sp"
    android:textColor="@color/white"
    android:textStyle="bold"
    android:textAlignment="center"
    android:layout_centerHorizontal="true"
    android:background="@color/purple_500"
    />

    <EditText
        android:id="@+id/nota1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/nota1"
        android:background="@color/cinza_claro"
        android:textColorHint="@color/cinza_escuro"
        android:textColor="@color/black"
        android:inputType="number"
        android:maxLength="2"
        android:gravity="center"
        android:padding="20dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/nota2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/nota2"
        android:background="@color/cinza_claro"
        android:textColorHint="@color/cinza_escuro"
        android:textColor="@color/black"
        android:inputType="number"
        android:maxLength="2"
        android:gravity="center"
        android:padding="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/nota3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/nota3"
        android:background="@color/cinza_claro"
        android:textColorHint="@color/cinza_escuro"
        android:textColor="@color/black"
        android:inputType="number"
        android:maxLength="2"
        android:gravity="center"
        android:padding="20dp"
        android:layout_below="@id/nota1"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/nota4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/nota4"
        android:background="@color/cinza_claro"
        android:textColorHint="@color/cinza_escuro"
        android:textColor="@color/black"
        android:inputType="number"
        android:maxLength="2"
        android:gravity="center"
        android:padding="20dp"
        android:layout_below="@id/nota2"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/numeroFaltas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/faltas"
        android:background="@color/cinza_claro"
        android:textColorHint="@color/cinza_escuro"
        android:textColor="@color/black"
        android:inputType="number"
        android:maxLength="2"
        android:gravity="center"
        android:padding="20dp"
        android:layout_below="@id/nota4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />

    <Button
        android:id="@+id/calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:padding="20dp"
        android:backgroundTint="@color/cinza_escuro"
        android:layout_below="@id/numeroFaltas"
        android:layout_margin="30dp"
        />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aprovado"
        android:textColor="@color/verde"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/calcular"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        />
</RelativeLayout>